# app-gaboma-AI-p-and-ma-

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-lock.yaml.4183112837  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: desktop-release.yml
backend/: config.yaml  main_dev.py  requirements-minimal.txt  requirements.txt
backend/agents/: graph.py
backend/api/: agents.py
backend/backend/: Dockerfile  main.py
backend/core/: __init__.py  config.py  database.py  security.py
backend/data/: webui.db
backend/db/: __init__.py  models.py  session.py
backend/gaboma-api/: main.py
backend/go/: go.sum
backend/open_webui/: __init__.py  config.py  env.py  main.py
backend/rust/: Cargo.toml  Dockerfile
backend/rust/src/: main.rs
backend/services/: groq_service.py  qdrant_service.py
docs/design-system/: gaboma_design_system_v3.md
drizzle/: 0000_complete_pride.sql  relations.ts  schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
messages/: fang.json  fr.json  punu.json
public/: manifest.json  offline.html  sw.js
scripts/: init-db.mjs  init_db.py  setup-admins.ts
src/: i18n.ts  middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx
src/components/: SplashScreen.tsx
src/config/: modelRegistry.ts
src/constants/: sidebar.constants.ts
src/design-tokens/: tokens.json
src/hooks/: useAgent.ts  useAgentBrowserWS.ts  useAgentSSE.ts  useChat.ts  (+4 more)
(+272 files in other folders)
