[package]
name = "gaboma-ai-desktop"
version = "2.0.0"
description = "GabomaGPT — IA Souveraine du Gabon"
authors = ["SmartANDJ AI Technologies"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
