[package]
name = "gabomagpt-rag"
version = "1.0.0"
edition = "2021"
authors = ["Daniel Jonathan ANDJ <contact@smartandj.com>"]
description = "GabomaGPT RAG Engine + Parser linguistique — SmartANDJ AI Technologies"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
unicode-segmentation = "1"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.12"
